Bug 459213 - Bring to front system settings pages when selecting them from the app menu when system settings is already running minimized
Summary: Bring to front system settings pages when selecting them from the app menu wh...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.25.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks: 460318
  Show dependency treegraph
 
Reported: 2022-09-16 14:07 UTC by Axel
Modified: 2022-10-12 16:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel 2022-09-16 14:07:40 UTC
STEPS TO REPRODUCE
1. Open system settings
2. Minimize it
3. Open a system settings section like 'Colors' from the app menu

OBSERVED RESULT
System settings silently switches to that page but the window stays minimized

EXPECTED RESULT
System settings switches to that page and raises its window

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch
(available in About System)
KDE Plasma Version: 5.25
KDE Frameworks Version: 5.98
Qt Version: 5.15

ADDITIONAL INFORMATION
Tried in Fedora 37, same result
Comment 1 Nicolas Fella 2022-09-16 14:10:00 UTC
I'm almost sure this was fixed with https://invent.kde.org/frameworks/kwindowsystem/-/merge_requests/61
Comment 2 Nicolas Fella 2022-09-16 17:58:04 UTC
hmm, not quite apparently. https://invent.kde.org/frameworks/kwindowsystem/-/merge_requests/61 fixes raising windows that are minimized.

However, raising systemsettings when opening a specific module like colors doesn't seem to work at all, regardless of whether it is minimized or not. Could this be because the desktop file name of what we launch (kcm_colors) doesn't match the desktop file name of what's being activated (systemsettings)?
Comment 3 Bug Janitor Service 2022-10-12 13:03:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/167
Comment 4 Nicolas Fella 2022-10-12 13:16:18 UTC
Git commit 4dfd45feeb5635103023612b79116e8a6408e389 by Nicolas Fella.
Committed on 12/10/2022 at 13:02.
Pushed by nicolasfella into branch 'master'.

[runner] Fix desktop file name

It's systemsettings.desktop without the org.kde. prefix

M  +1    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/4dfd45feeb5635103023612b79116e8a6408e389
Comment 5 Nicolas Fella 2022-10-12 13:17:16 UTC
Git commit 7a7e48764e81207847e00c95393fc25edbca75bc by Nicolas Fella.
Committed on 12/10/2022 at 13:16.
Pushed by nicolasfella into branch 'Plasma/5.26'.

[runner] Fix desktop file name

It's systemsettings.desktop without the org.kde. prefix
(cherry picked from commit 4dfd45feeb5635103023612b79116e8a6408e389)

M  +1    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/7a7e48764e81207847e00c95393fc25edbca75bc