[runner] Fix desktop file name

It's systemsettings.desktop without the org.kde. prefix

BUG: 459213